# MEE4034_PUBLIC

./: README.md
Experiment/: CMakeLists.txt
Experiment/include/: EposManager.h
Experiment/src/: EposManager.cpp  main.cpp
Scripts/: log_viewer.m
Share/include/: ControlUtils.h  DynamicsUtils.h  MathUtils.h  SimpleLogger.h
Share/src/: DynamicsUtils.cpp  MathUtils.cpp
Simulation/: CMakeLists.txt
Simulation/include/: EnvironmentManager.h
Simulation/model/: two_link_arm.xml
Simulation/model/assets/: axis_2nd_parent.stl  link_1st.stl  link_2nd_child.stl
Simulation/src/: EnvironmentManager.cpp  main.cpp
docs/: INSTALL_CMAKE.md  INSTALL_VS.md  TUTORIAL01.md
